# NutriLoop-Demo

./: main.py
nutriloop-langchain/: .env.example  README.md  pyproject.toml  requirements.txt
nutriloop-langchain/src/: main.py  orchestrator.py  utils.py  validators.py
nutriloop-langchain/src/agents/: nutrition_agent.py  safety_agent.py
nutriloop-langchain/src/flows/: __init__.py  langgraph_flow.py
nutriloop-langchain/src/llm/: chain_setup.py  client.py
nutriloop-langchain/src/tools/: calendar.py  grocery.py  mail.py
nutriloop-langchain/tests/: test_orchestrator.py  test_validators.py
